# shared-mime-info

./: CONTRIBUTING.md  meson.build
data/: freedesktop.org.xml.in
po/: meson.build
tests/: meson.build  test_mime_types_sorted.sh
tests/mime-detection/: build.gradle.kts  calc.sct  genesis3.smd  list  sedscript.sed  sega-binfmt-2-megadrive.gen  test.chart.puml  test.chen.puml  test.chrono.puml  test.ebnf.puml  test.files.puml  test.gantt.puml  test.n3  test.nw.puml  test.regex.puml  test.uml.puml  test.v1.car  test.v2.car  trafficlights.ase  trafficlights.flc
